updated to twiml

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "reddit-browser",
   "version": "0.0.1",
   "dependencies": {
-    "express": "2.5.x"
+    "express": "2.5.x",
+    "restler": "2.x.x"
   },
   "engines": {
     "node": "0.8.x",
